# thesteambot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  env.bot.example  env.example  env.web.example  pyproject.toml  sqlc.yml
.github/workflows/: black-lint.yml  pyright-lint.yml
bot/: Dockerfile
etc/nginx/sites-available/: thesteambot
src/thesteambot/bot/: __main__.py  bot.py  cleanup.py  errors.py  oauth.py  views.py
src/thesteambot/bot/cogs/: cleanup.py  errors.py  oauth.py
src/thesteambot/bot/views/: __init__.py  base.py  oauth.py
src/thesteambot/db/: __init__.py  client.py  connection.py  migrate.py  protocols.py  queries.sql
src/thesteambot/db/migrations/: 001-discord-oauth.sql  002-steam-link.sql
src/thesteambot/oauth/: __init__.py  errors.py  rest.py
src/thesteambot/web/: __main__.py  app.py  auth.py  lifespan.py  login.py  templating.py
src/thesteambot/web/templates/: base.j2
src/thesteambot/web/templates/auth/: discord.j2
web/: Dockerfile  pyproject.toml
