[build-system]
requires = ["uv-build~=0.9.5"]
build-backend = "uv_build"

[project]
name = "thesteambot"
description = "A Discord application for associating users with Steam accounts."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.30.0",
    "asyncpg-stubs~=0.30.2",
    "authlib~=1.6",
    "discord.py~=2.6",
    "hikari~=2.3.5",
    "httpx==0.28.1",
    "jishaku~=2.6",
    "pydantic~=2.11",
    "starlette[full]==0.47.2",
    "uvicorn==0.35.0",
]

[project.scripts]
thesteambot-bot = "thesteambot.bot.__main__:main"
thesteambot-db-migrate = "thesteambot.db.migrate:main"
thesteambot-web = "thesteambot.web.__main__:main"
