[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "thesteambot-web"
description = "A webserver for handling the OAuth2 flow with Steam."
version = "0.1.0"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
dependencies = [
    "authlib~=1.6",
    "httpx==0.28.1",
    "starlette==0.47.2",
    "uvicorn==0.35.0",
]

[project.scripts]
thesteambot-web = "thesteambot.web.__main__:main"
